--- a/custom_components/midea_dehumidifier/manifest.json
+++ b/custom_components/midea_dehumidifier/manifest.json
@@ -2,6 +2,7 @@
   "domain": "midea_dehumidifier",
   "name": "EVA II PRO WiFi Midea Inventor Dehumidifier custom integration",
   "documentation": "https://github.com/barban-dev/homeassistant-midea-dehumidifier/blob/master/README.md",
+  "issue_tracker": "https://github.com/barban-dev/homeassistant-midea-dehumidifier/issues",
   "dependencies": [],
   "codeowners": ["@barban-dev"],
   "requirements": ["midea-inventor-lib==1.0.4"],
