--- a/custom_components.json
+++ b/custom_components.json
@@ -1,5 +1,5 @@
 {
   "name": "EVA II PRO WiFi Midea Inventor Dehumidifier custom integration",
-  "owner": ["@barban-dev"],
+  "owner": ["barban-dev"],
   "url": "https://github.com/barban-dev/homeassistant-midea-dehumidifier"
 }
